# proleter

./: .clangd  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  compile_flags.txt  proleter
compiler/: README.md  emitter.js  index.js  lang.grammar  package-lock.json  package.json  parser.js
compiler/parser/: index.js
compiler/src/: codegen.js  emitter.js  symbols.js  types.js
editor/: proleter.vim
examples/: array.bc  arrays.plt  basic.plt  console.bc  echo_back.bc  echo_back.pl  echo_back.plt  feature.plt  fib.pl  fib.plt  fib_loop.bc  fib_rec.plt  fib_recursive.bc  flappy.plt  fs.plt  gameoflife.bc  gameoflife.pl  gameoflife.plt  gameoflife_nogrid.bc  grid_game.bc  hello.pl  loop.plt  ls.plt  memory.pl  memory.plt  object.bc  objects.plt  rule110.bc  rule110.plt  snake.pl  snake.plt  test.bc  test_module.plt  test_module_import.plt
examples/bytecode/: array.bc  console.bc  echo_back.bc  fib_loop.bc  fib_recursive.bc  gameoflife.bc  grid_game.bc  object.bc  rule110.bc  test.bc
src/: main.c  vm.c  vm.h  vm_builtins.h  vm_decoding.h  vm_structs.h  vm_utils.h
src/natives/: langstd.c
vm/: main.c  vm.c  vm_decoding.c
vm/include/: vm.h  vm_api.h
vm/runtime-libs/: fs.c  gc.c  math.c  process.c  std.c
